[UPDATE] #scrollbar fixed

--- a/src/components/row/Row.css
+++ b/src/components/row/Row.css
@@ -9,6 +9,7 @@
   overflow-x: scroll;
   padding: 20px;
   cursor: pointer;
+  overscroll-behavior-y: contain;
 }
 
 .row-posters::-webkit-scrollbar {
